cabal-version:      2.4
name:               wordle
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  WordLib, GuessLib, GameStateLib,  RequestLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base ^>=4.14.3.0,
        random ^>=1.2.1.1,
        http-conduit ^>=2.3.8,
        pretty-terminal ^>=0.1.0.0,
        bytestring
    hs-source-dirs:   src
    default-language: Haskell2010

executable wordle
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        mtl,
        base ^>=4.14.3.0,
        random ^>=1.2.1.1,
        pretty-terminal ^>=0.1.0.0,
        wordle

    hs-source-dirs:   app
    default-language: Haskell2010
